[package]
name = "helge"
version = "2.0.0-rc.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/nicrgren/helge"
readme = "README.md"
description = """
Tiny wrapper around r2d2::Pool and diesel ConnectionManager to ease use in async contexts
"""


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
tokio = { version = "1.20", features = [ "rt" ] }
diesel = { version = "2.0.0-rc.1", features = [ "postgres", "r2d2" ] }



[dev-dependencies]
tokio = { version = "1.20", features = [ "rt-multi-thread", "macros" ] }
